This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Crash (constructed) in subprocess_fork_exec()
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 3.2, Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: loewis, python-dev, skrah
Priority: normal Keywords: patch

Created on 2012-08-20 11:31 by skrah, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
subprocess_fork_exec.diff skrah, 2012-08-20 11:31 review
Messages (4)
msg168645 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-20 11:31
Coverity found a missing NULL check in subprocess_fork_exec(). Patch attached.


Demonstration:

import _posixsubprocess
class Z(object):
    def __len__(self):
        return 1

_posixsubprocess.fork_exec(Z(),[b'1'],3,[1, 2],5,6,7,8,9,10,11,12,13,14,15,16,17)


[Segmentation fault]
msg168651 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2012-08-20 12:24
That's fine, please apply
msg168654 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-20 12:48
New changeset 03c98d05b140 by Stefan Krah in branch '3.2':
Issue #15738: Fix a missing NULL check in subprocess_fork_exec().
http://hg.python.org/cpython/rev/03c98d05b140
msg168655 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-20 12:51
Thanks again!
History
Date User Action Args
2022-04-11 14:57:34adminsetgithub: 59943
2012-08-20 12:51:32skrahsetstatus: open -> closed
versions: + Python 3.2
messages: + msg168655

resolution: fixed
stage: patch review -> resolved
2012-08-20 12:48:22python-devsetnosy: + python-dev
messages: + msg168654
2012-08-20 12:24:28loewissetnosy: + loewis
messages: + msg168651
2012-08-20 11:31:59skrahcreate