Issue #15738: Fix a missing NULL check in subprocess_fork_exec().